自定义ItemDecoration实现Recyclerview分组及吸顶效果

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "CustomView"
 include ':app'
 include ':flowlayout'
+include ':customrecyclerview'
