实现验证码输入框效果

--- a/VerificationCodeView/src/main/AndroidManifest.xml
+++ b/VerificationCodeView/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flowlayout">
+    package="com.sun.verificationcodeview">
 
     <application>
         <activity
-            android:name=".FlowLayoutActivity"
+            android:name=".VerificationCodeViewActivity"
             android:exported="false" />
     </application>
 
