--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,5 @@ include ':flowlayout'
 include ':customrecyclerview'
 include ':camera'
 include ':draglayout'
+include ':motionlayout'
+include ':VerificationCodeView'
